# BORJIE-101

./: .dependency-cruiser.cjs  .dockerignore  .env.docker.example  .env.example  .env.production.example  .gitignore  .gitleaks.toml  .knip-baseline.json  .knip.json  .prettierignore  .semgrepignore  .trivyignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PROJECT_BOUNDARY.md  README.md  docker-compose.e2e.yml  docker-compose.ha.yml  docker-compose.override.yml  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  eslint.config.mjs  knip.json  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.github/: CI_SOFT_FAILURES.md  dependabot.yml  security-route-allowlist.yml
.husky/: pre-commit
Docs/: AGENTIC_OS_SYNTHESIS_2026-05-24.md  AGENT_ORCHESTRATOR_RESEARCH_2026-05-24.md  ANALYTICS_SOTA_RESEARCH_2026-05-24.md  API.md  API_CONTRACTS.md  API_SPEC.yaml  ARCHITECTURE.md  ARCHITECTURE_BRAIN.md  ARCHITECTURE_CENTRAL_COMMAND.md  AUDIO_CAPTURE_SOTA_RESEARCH_2026-05-24.md  AUDIO_LOGICS_LITFIN_RESEARCH_2026-05-25.md  BIAS_HANDLING_SOTA_2026-05-25.md  BOSSNYUMBA_PRD.md  CLAUDE_CODE_PARITY_2026-05-24.md  COMPLIANCE_PACK_RESEARCH_2026-05-24.md  CORPUS_LOCATION.md  CPG_ARCHITECTURE.md  CUSTOMER_APP.md  DATA_FLOWS.md  DEPLOYMENT.md  DEP_HYGIENE.md  ENV.md  (+59 more)
services/scientific-discovery-sidecar/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
services/scientific-discovery-sidecar/app/: __init__.py  main.py  settings.py
services/scientific-discovery-sidecar/app/models/: schemas.py
services/scientific-discovery-sidecar/app/routes/: dowhy_refute.py  health.py  pcmciplus.py  readyz.py
services/scientific-discovery-sidecar/app/services/: __init__.py  data_loader.py  dowhy_engine.py  pcmciplus_engine.py
services/scientific-discovery-sidecar/tests/: conftest.py  test_data_loader.py  test_dowhy_refute.py  test_health.py  test_metrics.py  test_pcmciplus.py  test_readyz.py
(+5148 files in other folders)
